--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div class="container">
   <h1>Get Afronika Mobile App Today!</h1>
-  <p>Shop your favorite Gadget anytime easily and securely , anywhere. Download Afronika app now.</p>
+  <p>Shop your favorite Gadget anytime, anywhere easily and securely. Download Afronika app now.</p>
 
   <div class="buttons">
     <a href="https://play.google.com/store/apps/details?id=com.benjamin_pro.afronika_app" class="google-play" target="_blank">
