Add footer with copyright information
Added footer section with copyright notice.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 
 </div
 </div>
+<!-- Footer -->
+<footer>
+  © 2025 Afronika. All rights reserved.
+</footer>
 
 <!-- Device detection script -->
 <script>
