Add divider line before footer in index.html

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 
 </div
 </div>
+  <!-- Divider Line -->
+<hr class="divider">
 <!-- Footer -->
 <footer>
   © 2025 Afronika. All rights reserved.
