Update headings and customer support text in index.html

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
 <div class="container">
   <img src="transparent-Photoroom.png" alt="Afronika Logo" class="logo">
-  <h1>Get Afronika Mobile App Today!</h1>
-  <p>Shop your favorite Gadget anytime anywhere easily and securely. Download Afronika app now.</p>
+  <h1>Get Afronika Mobile App To Start Shopping!</h1>
+  <p>Shop your favorite Gadget anytime anywhere easily and securely. Download Afronika mobile app now.</p>
 
   <div class="buttons">
     <a href="https://play.google.com/store/apps/details?id=com.benjamin_pro.afronika_app" class="google-play" target="_blank">
@@ -91,7 +91,7 @@
   </div>
 <div class="features">
     <div class="feature">📱 Enjoy your one-stop Shopping time with the Afronika mobile app</div>
-  <div class="feature">💡 Enjoy Unlimited experience with Afronika technology – 24/7 Afronika Customer care</div>
+  <div class="feature">💡 Enjoy Unlimited experience with Afronika technology – 24/7 customer support</div>
   <div class="feature">🌐 Discover the New Digital world with Afronika technology</div>
 
 </div
